Fix UI on mobile devices

--- a/apps/hackernews-react/src/styles.css
+++ b/apps/hackernews-react/src/styles.css
@@ -30,10 +30,7 @@ a:hover {
   text-decoration: underline;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
   margin: 0;
 }
 
@@ -50,8 +47,17 @@ nav a:last-child {
 }
 
 #root {
-  min-width: 768px;
-  margin: 0 auto 15px;
   width: 85%;
+  margin: 0 auto;
   background-color: var(--light-bg);
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    margin: 0;
+  }
+
+  #root {
+    min-width: 100vw;
+  }
 }
